cluster/apps/default/gitness/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitness
  namespace: default
  labels:
    app: gitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitness
  template:
    metadata:
      labels:
        app: gitness
    spec:
      containers:
        - name: gitness
          image: harness/gitness:3.0.0-beta.5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
          volumeMounts:
            - name: gitness
              mountPath: /data
        - name: dind-daemon
          image: docker:25.0.0-dind
          command:
            - "dockerd"
            - "-H"
            - "tcp://0.0.0.0:2375"
            - "--tls=false"
          securityContext:
            privileged: true
            runAsUser: 0
            capabilities:
              add: ["SYS_ADMIN"]
          volumeMounts:
            - name: docker-graph-storage
              mountPath: /var/lib/docker
      volumes:
        - name: gitness
          persistentVolumeClaim:
            claimName: gitness
        - name: docker-graph-storage
          emptyDir: {}
