cluster/apps/default/gitness/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitness
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "git"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-ips-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - git.${SECRET_LAB_DOMAIN}
  rules:
    - host: git.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gitness
                port:
                  name: http
